# crafterv4

./: .gitignore  Dockerfile  README.md  docker-compose.yml  media_stacksCont  requirements.txt  temp.html  webpack.config.js
core/: modal_launcher.py  settings.py  urls.py
cpp-video-processor/: CMakeLists.txt  build.sh  install_dependencies.sh  main.cpp  video_processor.cpp  video_processor.h
mainapps/accounts/: models.py  views.py
mainapps/accounts/migrations/: 0009_alter_plan_options.py
mainapps/video/: models.py  speed_up_video_.py  urls.py  views.py
mainapps/vidoe_text/: celery_handlers.py  models.py  urls.py  views.py
mainapps/vidoe_text/migrations/: 0013_alter_subclip_options_alter_textfile_options_and_more.py  0014_alter_subclip_options_and_more.py  0015_alter_subclip_options_subclip_position_in_slide.py  0016_alter_textlinevideoclip_options_and_more.py  0017_textfile_box_radius_textfile_subtitle_opacity.py  0018_alter_textfile_box_radius.py  0019_alter_textlinevideoclip_options_and_more.py  0020_subclip_processed_video_alter_subclip_video_file.py  0022_subclip_is_tiktok.py  (+2 more)
static/add_scene/: script.js  style.css
static/js/: script.js
static/landing/: landing-bck.css  landing.css  landing_style-bck.css  landing_style.css
templates/: speed_up_video.html  sub_header.html  upload.html
templates/accounts/: details.html  login.html  pricing_page.html  register.html  verification.html
templates/assets/: text_files.html
templates/partials/: back.html  head_c.html
templates/vlc/: add_music.html  download.html  progress.html  update_text_file.html
(+28 files in other folders)
